//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table folder {
  id String [pk]
  lastModified DateTime [not null]
  title String [not null]
  description String
  survivalStatus SurvivalStatus [not null, default: 'ALIVE']
  lastDeleted DateTime
  authorId String [not null]
  author user [not null]
  childrenDocs doc [not null]
  parentFolderId String
  parentFolder folder
  childrenFolders folder [not null]
  roles role [not null]
  fastAccessedUsers user [not null]
  likedBestUsers user [not null]
}

Table doc {
  id String [pk]
  lastModified DateTime [not null]
  value Bytes [not null]
  survivalStatus SurvivalStatus [not null, default: 'ALIVE']
  lastDeleted DateTime
  docType DocType [not null]
  authorId String [not null]
  author user [not null]
  parentFolderId String
  parentFolder folder
  parentDocId String
  parentDoc doc
  childrenDocs doc [not null]
  roles role [not null]
  fastAccessedUsers user [not null]
  likedBestUsers user [not null]
}

Table user {
  id String [pk]
  username String [not null]
  nickname String [not null]
  password Bytes [not null]
  survivalStatus SurvivalStatus [not null, default: 'ALIVE']
  authoredDocs doc [not null]
  authoredFolders folder [not null]
  fastAccessDocs doc [not null]
  fastAccessFolders folder [not null]
  favoriteDocs doc [not null]
  favoriteFolders folder [not null]
  roles role [not null]
  accessLogs user_access_log [not null]
}

Table user_access_log {
  id String [pk]
  userId String [not null]
  user user [not null]
  time DateTime [not null]
}

Table role {
  id String [pk]
  roleType RoleType [not null]
  docId String
  doc doc
  folderId String
  folder folder
  users user [not null]
  parentRoles role [not null]
  childrenRoles role [not null]
}

Table fast_access_folders_to_users {
  fastaccessedusersId String [ref: > user.id]
  fastaccessfoldersId String [ref: > folder.id]
}

Table favorite_folders_to_users {
  likedbestusersId String [ref: > user.id]
  favoritefoldersId String [ref: > folder.id]
}

Table fast_access_docs_to_users {
  fastaccessedusersId String [ref: > user.id]
  fastaccessdocsId String [ref: > doc.id]
}

Table favorite_docs_to_users {
  likedbestusersId String [ref: > user.id]
  favoritedocsId String [ref: > doc.id]
}

Table roles_to_users {
  rolesId String [ref: > role.id]
  usersId String [ref: > user.id]
}

Table parent_roles_to_child_roles {
  parentrolesId String [ref: > role.id]
  childrenrolesId String [ref: > role.id]
}

Enum SurvivalStatus {
  ALIVE
  DELETED
  COMPLETELY_DELETED
}

Enum DocType {
  GENERAL
  WIKI
}

Enum RoleType {
  ADMINISTRATOR
  COLLABORATOR
  READER
}

Ref: folder.authorId > user.id

Ref: folder.parentFolderId - folder.id

Ref: doc.authorId > user.id

Ref: doc.parentFolderId > folder.id

Ref: doc.parentDocId - doc.id

Ref: user_access_log.userId > user.id

Ref: role.docId > doc.id

Ref: role.folderId > folder.id